--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 absl-py==1.4.0
+antiorm==1.2.1
 astunparse==1.6.3
 cachetools==5.3.0
 certifi==2022.12.7
 charset-normalizer==3.0.1
 contourpy==1.0.7
 cycler==0.11.0
+db==0.1.1
+db-sqlite3==0.0.1
 flatbuffers==23.1.21
 fonttools==4.38.0
 gast==0.4.0
